tests/fixtures/invalid/missing_brace.dub
// Missing closing brace on function body.
fun bad(n) {
    var x = 1;
